# Scikit-Extensions-Stock

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
Scikit_Extensions_For_Stocks/: __init__.py
Scikit_Extensions_For_Stocks/fft_transformer/: __init__.py  _fft_1Dtransformer.py
Scikit_Extensions_For_Stocks/keras_wrapper_sklearn/: __init__.py  _baseWrapper.py
Scikit_Extensions_For_Stocks/lstm/: __init__.py
Scikit_Extensions_For_Stocks/sliding_window_tranformer/: __init__.py  _sliding_window_tfrmer.py
Scikit_Extensions_For_Stocks/time_series_scaler/: _TimeSeriesScaler.py  __init__.py
tests/: test.ipynb
