[metadata]
name = finance-scikit-extensions
version = 0.0.1
author = Nikhil Ranjan
author_email = Nikhil.Ranjan@uga.edu
description = A small package with classes for helping users work with stock data
long_description = file: README.md
long_description_content_type = text/markdown
url = ''
project_urls =
    Bug Tracker = ''
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6